--- a/src/Makefile
+++ b/src/Makefile
@@ -3,7 +3,8 @@
 # where the Cortex M0 libraries from gcc are installed on *my* system.  *Your* system
 # will be different
 # Tell the linker where to find the libraries -> important: use thumb versions
-LIBSPEC=-L /usr/lib/gcc/arm-none-eabi/5.4.1/armv6-m
+ARM_TOOLCHAIN_VERSION=$(shell ls -1 /usr/lib/gcc/arm-none-eabi | head)
+LIBSPEC=-L /usr/lib/gcc/arm-none-eabi/$(ARM_TOOLCHAIN_VERSION)/armv6-m
 
 # Specify the compiler to use
 CC=arm-none-eabi-gcc
